fixed branding visibility before login in guest referral scenario. fixed "powered by" positioning.

--- a/src/brandings/branding-dental-phone.css
+++ b/src/brandings/branding-dental-phone.css
@@ -2,7 +2,7 @@
     background-color: #f2e8d0;
 }
 
-.navbar-brand img {
+.navbar-brand img, .navbar-header .logged-out img {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
